--- a/blog-api/src/main/resources/application.properties
+++ b/blog-api/src/main/resources/application.properties
@@ -16,10 +16,10 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 
 # datasource
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/blog?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://nekotori.xyz:10003/blog?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=1234abcd@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.datasource.initialize=true
 #spring.datasource.platform=mysql
@@ -66,8 +66,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 #redis
 spring.redis.database=0
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.redis.host=www.nekotori.xyz
+spring.redis.port=10002
 spring.redis.password=
 spring.redis.timeout= 10000 
 spring.redis.pool.max-active=8 
