--- a/blog-api/src/main/resources/application.properties
+++ b/blog-api/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
   classpath:/static/,classpath:/public/,file:${me.upload.path}
 
 
-# datasource
+# datasource mysql数据库
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql://nekotori.xyz:10003/blog?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
@@ -26,7 +26,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.schema=schema   	schema-mysql.sql
 #spring.datasource.data=data 		data-mysql.sql
 
-#druid
+#druid数据库连接池
 spring.datasource.druid.initial-size=5
 spring.datasource.druid.max-active=20
 spring.datasource.druid.min-idle=5
@@ -50,10 +50,10 @@ spring.datasource.druid.filter.stat.merge-sql=true
 
 
 #druid servlet
-spring.datasource.druid.stat-view-servlet.login-username=shimh
-spring.datasource.druid.stat-view-servlet.login-password=shimh
+spring.datasource.druid.stat-view-servlet.login-username=nekotori
+spring.datasource.druid.stat-view-servlet.login-password=admin
 spring.datasource.druid.stat-view-servlet.reset-enable=false
-spring.datasource.druid.stat-view-servlet.allow=172.16.8.2
+spring.datasource.druid.stat-view-servlet.allow=127.0.0.1
 
 
 #jpa
@@ -65,15 +65,15 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.cache.ehcache.config=classpath:ehcache.xml
 
 #redis
-spring.redis.database=0
+spring.redis.database=10
 spring.redis.host=www.nekotori.xyz
 spring.redis.port=10002
 spring.redis.password=
-spring.redis.timeout= 10000 
-spring.redis.pool.max-active=8 
-spring.redis.pool.max-wait=-1     
-spring.redis.pool.max-idle=8    
-spring.redis.pool.min-idle=0   
+spring.redis.timeout= 10000
+spring.redis.pool.max-active=8
+spring.redis.pool.max-wait=-1
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
 
 #log
 logging.config=classpath:log4j2-spring.xml
